# android_external_libXtrans

./: .gitlab-ci.yml  Xtrans.c  Xtransint.h  Xtranslcl.c  Xtranssock.c  Xtransutil.c  meson.build  xtrans.m4
